core.example/coredns/overlays/prod/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: coredns
spec:
  template:
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: coredns
            items:
              - key: Corefile
                path: Corefile
            defaultMode: 420
