core.example/coredns/overlays/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coredns
  namespace: kube-system
  labels:
    k0s.k0sproject.io/stack: coredns
    k8s-app: kube-dns
    kubernetes.io/name: CoreDNS
spec:
  template:
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: coredns
            items:
              - key: Corefile
                path: Corefile
              - key: example.com.db
                path: example.com.db
            defaultMode: 420
