core.example/coredns/overlays/prod/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: dns-tcp
  labels:
    app.kubernetes.io/name: dns-tcp
    app.kubernetes.io/component: ingress-route-tcp

spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: kube-dns
          namespace: kube-system
          port: 53
